modified file path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="nav-section">
-		<img src="../images/best.png">
+		<img src="images/best.png">
 		<ul class="nav">
 			<li><a href="#" >Home</a></li>
 			<li><a href="#">About Us</a></li>
@@ -38,7 +38,7 @@
 
 	<div class="slideshow-container">
 		<div class="myslides">
-			<img src="../images/b.jpg">
+			<img src="images/b.jpg">
 			<div class="text">
 				<h3>DESTINATIONS</h3>
 				<p>More than 40 popular destinations</p>
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="myslides">
-			<img src="../images/f.jpg">
+			<img src="images/f.jpg">
 			<div class="text">
 				<h3>BESTINATION TRAVELS NEPAL</h3>
 				<p>Your best companion for travel ...</p>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<div class="myslides">
-			<img src="../images/d.jpg">
+			<img src="images/d.jpg">
 			<div class="text">
 				<h3>PACKAGED DEALS</h3>
 				<p>Best custom and tailored packages</p>
@@ -74,20 +74,20 @@
 		<p >Checkout the best packages</p>
 		<div class="package-list">
 			<div class="list">
-				<img src="../images//patan.jpg">
+				<img src="images//patan.jpg">
 				<p>Best of patan</p>
 			</div>
 
 			<div class="list">
-				<img src="../images/bhaktapur.jpg">
+				<img src="images/bhaktapur.jpg">
 				<p>Ancient civilization</p>
 			</div>
 			<div class="list">
-				<img src="../images/soyambu.jpg">
+				<img src="images/soyambu.jpg">
 				<p>World Heritage Site</p>
 			</div>
 			<div class="list">
-				<img src="../images/pashupati.jpg">
+				<img src="images/pashupati.jpg">
 				<p>Pashupatinath holy place</p>
 			</div>
 		</div>
@@ -99,32 +99,32 @@
 		<p>Premium destinations on offer</p>
 		<div class="destinations-list">
 			<div class="dt-list">
-				<img src="../images/patan.jpg">
+				<img src="images/patan.jpg">
 				<p>Patan</p>
 			</div>
 
 			<div class="dt-list">
-				<img src="../images/bhaktapur.jpg">
+				<img src="images/bhaktapur.jpg">
 				<p>Bhaktapur</p>
 			</div>
 
 			<div class="dt-list">
-				<img src="../images/chitwan.jpg">
+				<img src="images/chitwan.jpg">
 				<p>Chitwan</p>
 			</div>
 
 			<div class="dt-list">
-				<img src="../images/lumbini.jpg">
+				<img src="images/lumbini.jpg">
 				<p>lumbini</p>
 			</div>
 
 			<div class="dt-list">
-				<img src="../images/soyambu.jpg">
+				<img src="images/soyambu.jpg">
 				<p>Soyambhu</p>
 			</div>
 
 			<div class="dt-list">
-				<img src="../images/pashupati.jpg">
+				<img src="images/pashupati.jpg">
 				<p>Pashupati</p>
 			</div>
 		</div>
