image file fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="nav-section">
-		<img src="images/best.png">
+		<img src="./images/best.png">
 		<ul class="nav">
 			<li><a href="#" >Home</a></li>
 			<li><a href="#">About Us</a></li>
@@ -38,7 +38,7 @@
 
 	<div class="slideshow-container">
 		<div class="myslides">
-			<img src="images/b.jpg">
+			<img src="./images/b.jpg">
 			<div class="text">
 				<h3>DESTINATIONS</h3>
 				<p>More than 40 popular destinations</p>
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="myslides">
-			<img src="images/f.jpg">
+			<img src="./images/f.jpg">
 			<div class="text">
 				<h3>BESTINATION TRAVELS NEPAL</h3>
 				<p>Your best companion for travel ...</p>
