all css in same file

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<div class="top">
 		<h4>Support call +977-01-4567895</h4>
 		<div class="icon">
-			<a href="facebook.com">icon1</a>
-			<a href="facebook.com">icon2</a>
-			<a href="facebook.com">icon3</a>
-			<a href="facebook.com">icon4</a>
+			<a href="facebook.com"><img src="images/facebook.png"></a>
+			<a href="facebook.com"><img src="images/instagram.png"></a>
+			<a href="facebook.com"><img src="images/facebook.png"></a>
+			<a href="facebook.com"><img src="images/instagram.png"></a>
 		</div>
 	</div>
 
@@ -191,7 +191,6 @@
 			
 			slides[slideIndex-1].style.display = "block"; 
 		}
-		
 	</script>
 
 </body>
