used media screen to make mobile responsive

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Visit Nepal</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="visitnepal.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -15,16 +17,20 @@
 		</div>
 	</div>
 
-	<div class="nav-section">
-		<img src="./images/best.png">
-		<ul class="nav">
-			<li><a href="#" >Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Destination</a></li>
-			<li><a href="#">Packages</a></li>
-			<li><a href="#">Contact</a></li>
-			<li><a href="#">Blogs</a></li>
-		</ul>
+	<div class="nav-section"> 
+		<img src="./images/best.png"> 
+		<div class="nav">
+			<a href="#" >Home</a>
+			<a href="#">About Us</a>
+			<a href="#">Destination</a>
+			<a href="#">Packages</a>
+			<a href="#">Contact</a>
+			<a href="#">Blogs</a>
+		</div>
+		<a href="javascript:void(0);" class="hidden-icon" onclick="myFunction()">
+    		<i class="fa fa-bars"></i>
+  		</a> 
+
 	</div>
 	
 
