--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<div class="nav-section"> 
 		<img src="./images/best.png"> 
-		<div class="nav">
+		<div class="nav " id="myTopnav">
 			<a href="#" >Home</a>
 			<a href="#">About Us</a>
 			<a href="#">Destination</a>
@@ -141,7 +141,7 @@
 					The day started with the magnificent view of the sunrise from the Australian camp, indeed for a person like me born, grown up and living in a hustle and bustle city like Kathmandu that view was breathtaking. It made me feel glad that the previous journey from Kathmandu-Kande-Australian camp was a good decision.
 				</p>
 				<div class="btn">
-					<a href="#blogs">More</a>
+					<a href="#blogs">More info</a>
 				</div>
 			</div>
 
@@ -198,6 +198,7 @@
 			slides[slideIndex-1].style.display = "block"; 
 		}
 	</script>
+
 
 </body>
 </html>
